2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b41

 * Change: Remove fotoserve as Service ! Album Version bump.

 * New: Nice JS progessbar for album upgrade.

 * Fix: Added the js files for arrow nav and strengthmeter.

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b40

 * New: Added one more skin.

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b39

 * New: Arrow Navigation. Veeery Nice :-)

 * Change: Other navigation issues.

 * New: Added JS password strengthmeter.

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b38

 * Change:

  - Code beautify

  - Code consolidation

  - Code cleanup

  - Wording

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b37

 Security fixes.

 * Fix: Possible XSS protection in User->load and Album->load()

 * Fix: Stronger hash algorithm for new/lost password.

 * Fix: Added much better password strengthness.
   
 * Fix: Better check for valid album names.

 * New functions:
   - validAlbumName($name)
   - passwordStrength($password)
   - cleanRepetition($partLen, $string)

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b36

 * Change: Nice new donate icon.

 * Change: Nice new Gallery 1.5.8 icon :-)))
           The 1st G1 icon.

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b35

 * CHANGE: Added new colorpicker.

 * CHANGE: Renamed toggle.js into toggle.js.php
            Enhanced Skript to work everywhere.

 * Fix: Another place, where $_REQUEST is modified.

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b34

 * FIX: Do not only accept $_POST and $_GET for $_REQUEST.

 * Change: Added possibility to logout in various places.

 * Fix: Add more security to user preferences dialog.

 * Change: Code beautify ;-)

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b33

 * SECURITY BUGFIX *

 + Inadequate Application Error Handling and Suppression + 

 Detailed error messages often result from unhandled or unexpected exceptions
 within application code. These messages are