@@ -159,54 +159,66 @@ class Image {
 		}
 	}
 
-	function getTag($dir, $full = 0, $size = 0, $attrs = '',$alttext = '') {
+	function getTag($dir, $full = false, $size = 0, $attrs = array()) {
 		global $gallery;
 
 		/* Prevent non-integer data */
 		$size = (int)$size;
 
-		$name = $this->getName($dir);
-		$alttext = htmlspecialchars(strip_tags($alttext));
+		$attrsCopy = $attrs;
 
-		$attrs .= ' border="0"';
+		$attrs['alt'] = $attrs['title'] = htmlspecialchars(strip_tags(trim($attrs['alt'])));
 
 		if ($size) {
 			if ($this->width > $this->height) {
-				$width = $size;
-				$height = round($size * ($this->height / $this->width));
+				$width	= $size;
+				$height	= round($size * ($this->height / $this->width));
 			}
 			else {
-				$width = round($size * ($this->width / $this->height));
-				$height = $size;
+				$width	= round($size * ($this->width / $this->height));
+				$height	= $size;
 			}
-
-			$size_val = "width=\"$width\" height=\"$height\"";
+			$attrs['width']		= $width;
+			$attrs['height']	= $height;
 		}
 		else if ($full || !$this->resizedName) {
-			$size_val = "width=\"$this->raw_width\" height=\"$this->raw_height\"";
+			$attrs['width']		= $this->raw_width;
+			$attrs['height']	= $this->raw_height;
 		}
 		else {
-			$size_val = "width=\"$this->width\" height=\"$this->height\"";
+			$attrs['width']		= $this->width;
+			$attrs['height']	= $this->height;
 		}
 
-		$fullImage		= urlencode($this->name) .".$this->type";
+		$fullImage	= urlencode($this->name) .".$this->type";
 		$resizedImage	= urlencode($this->resizedName) .".$this->type";
 
 		if ($this->resizedName && $size == 0) {
 			if ($full) {
-				return "<img src=\"$dir/$fullImage\" ".
-				"width=\"$this->raw_width\" height=\"$this->raw_height\" .
-			$attrs alt=\"$alttext\" title=\"$alttext\">";
+				$attrs['width']		= $this->raw_width;
+				$attrs['height']	= $this->raw_height;
+				$attrs['src']		= "$dir/$fullImage";
 			}
 			else {
-				return "<img src=\"$dir/$resizedImage\" ".
-				"width=\"$this->width\" height=\"$this->height\" " .
-				"$attrs alt=\"$alttext\" title=\"$alttext\">";
+				$attrs['width']		= $this->width;
+				$attrs['height']	= $this->height;
+				$attrs['src']		= "$dir/$resizedImage";
 			}
 		}
 		else {
-			return "<img src=\"$dir/$fullImage\" $size_val $attrs alt=\"$alttext\" title=\"$alttext\" name=\"myPic\">";
+			$attrs['src']			= "$dir/$fullImage";
 		}
+
+		$overwrite = array('height', 'width');
+		foreach ($overwrite as $attr) {
+			if(isset($attrsCopy[$attr])) {
+				$attrs[$attr] = $attrsCopy[$attr];
+			}
+		}
+
+		$tag = '<img'. generateAttrs($attrs). '>';
+
+		return $tag;
 	}
 
 	function getName($dir, $full = false) {
