@@ -1,3 +1,14 @@
+2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b42
+
+ Method enhancements
+
+ - Album->getParentAlbums
+
+ - Album->resizeAllPhotos
+
+ - ALL_WHERE_A_HTML_TAG_IS_RETURNED !!
+  $attrs is now an array(), not a string !!
+  
 2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b41
 
  * Change: Remove fotoserve as Service ! Album Version bump.
